objects/NGCC_SMS_History__c.object
<CustomObject>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>NGCC SMS History</relationshipLabel>
        <relationshipName>NGCC_SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sent By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NGCC_SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sent_Date__c</fullName>
        <label>Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Not Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>NGCC SMS History</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>SMS No-</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NGCC SMS History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>